Thay đổi tên và logo của app , hoàn thiện app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Quizzzz</string>
+    <string name="app_name">Final Project</string>
     <string name="play_history">Lịch sử chơi</string>
     <string name="play">Chơi</string>
     <string name="contribute">Góp ý</string>
